# InfiniTAM

./: .gitignore  calib.txt
Files/: TrajAnalysis.m  calib_forFiles.txt  calib_forFiles_2_fromInternet.txt  calib_forFiles_3_fromITMCalib.txt  calib_forFiles_4_handTaylored.txt  calib_forFiles_badOffset.txt  calib_forFiles_noOffset.txt  dataLink.m
InfiniTAM/: CMakeLists.txt  InfiniTAM.cpp
InfiniTAM/Engine/: CMakeLists.txt  ImageSourceEngine.cpp  MocapFileEngine.cpp  MocapFileEngine.h  MocapSourceEngine.cpp  MocapSourceEngine.h  MocapViveEngine.cpp  MocapViveEngine.h  OpenNIEngine.cpp  OpenNIEngine.h  UIEngine.cpp  UIEngine.h
InfiniTAM/ITMLib/: CMakeLists.txt  ITMLib.h
InfiniTAM/ITMLib/Engine/: ITMCompositeTracker.h  ITMDepthMocapTracker.cpp  ITMDepthMocapTracker.h  ITMDepthTracker.cpp  ITMDepthTracker.h  ITMIMUTracker.h  ITMMainEngine.cpp  ITMMainEngine.h  ITMTracker.h  ITMTrackerFactory.h  ITMTrackingController.cpp  ITMTrackingController.h  ITMViewBuilder.h  ITMVisualisationEngine.h  ITMWeightedICPTracker.cpp  ITMWeightedICPTracker.h
InfiniTAM/ITMLib/Engine/DeviceAgnostic/: ITMDepthTracker.h  ITMPixelUtils.h  ITMViewBuilder.h  ITMVisualisationEngine.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CPU/: ITMColorTracker_CPU.h  ITMDepthDefaultTracker_CPU.cpp  ITMDepthDefaultTracker_CPU.h  ITMDepthMocapTracker_CPU.cpp  ITMDepthMocapTracker_CPU.h  ITMDepthTracker_CPU.cpp  ITMDepthTracker_CPU.h  ITMRenTracker_CPU.h  ITMViewBuilder_CPU.cpp  ITMViewBuilder_CPU.h  ITMVisualisationEngine_CPU.h  ITMWeightedICPTracker_CPU.cpp  ITMWeightedICPTracker_CPU.h
InfiniTAM/ITMLib/Engine/DeviceSpecific/CUDA/: ITMColorTracker_CUDA.h  ITMDepthDefaultTracker_CUDA.cu  ITMDepthDefaultTracker_CUDA.h  ITMDepthMocapTracker_CUDA.cu  ITMDepthMocapTracker_CUDA.h  ITMDepthTracker_CUDA.cu  ITMDepthTracker_CUDA.h  ITMRenTracker_CUDA.h  ITMViewBuilder_CUDA.cu  ITMViewBuilder_CUDA.h  ITMVisualisationEngine_CUDA.cu  ITMVisualisationEngine_CUDA.h  ITMWeightedICPTracker_CUDA.cu  ITMWeightedICPTracker_CUDA.h
InfiniTAM/ITMLib/Objects/: ITMDepthCorrection.h  ITMMesh.cpp  ITMMesh.h  ITMRGBDCalib.h  ITMRenderState.h  ITMTrackingState.h  ITMViewMocap.h
InfiniTAM/ITMLib/Utils/: ITMCalibIO.cpp  ITMCalibIO.h  ITMDepthCorrectionIO.h  ITMLibSettings.cpp  ITMLibSettings.h
InfiniTAM/ORUtils/: Image.h  MathUtils.h  MemoryBlock.h
InfiniTAM/Utils/: FileUtils.cpp
InfiniTAM/cmake/: FindOpenNI.cmake  FindOpenVR.cmake
